Fix index post metadata align

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -188,6 +188,10 @@ hr {
 						margin-top: 0;
 						margin-bottom: 0;
 					}
+
+					.post-meta {
+						text-align: right;
+					}
 				}
 			}
 		}
